20190417	Applying most of NetBSD's patches for the gxemul package (all
		except two).
20190418	Adding 512 KB ROM at 0xfff80000 in the HP 700/RX machine.
20190422	Implementing the i960 "mov reg,reg" instruction.
20190502	Adding a section to the documentation about how to use the
		emulator as a debugger (breakpoints, unassembling, single-
		stepping, inspecting registers, and so on).
20190515	Making sure that when invalidating virtual addresses in
		the dyntrans cache, take into account that not all CPUs can
		use all 64 bits for virtual addresses. This fixes a very old
		bug which affected Glatt MU/MK. Unfortunate side effect means
		that internal cache invalidation goes from O(1) to O(n) for
		64-bit address spaces. :-(
20190519	Better fix for the issue found four days ago, taking 32-bit
		addressing (UX=0) on 64-bit MIPS CPUs into account. The cache
		invalidation code is now O(1) again. :-)
20190520	Unfortunately, to make everything work with all guest OSes
		with many different kinds of CPUs (R3000, R4000, R10000),
		the invalidation is now O(n) again, but it works.
20190521	De-emphasizing the new framework in the man page and in the
		help/usage message produced when running gxemul with no
		arguments, focusing on the old/legacy framework.
		Removing the MIPS CPU emulation and testmips machines from
		the new framework completely. Any MIPS enhancements and bug
		fixes will go into the old framework only.
		Renaming oldtestmips back to testmips.
20190523	Starting to move guest OS installation instructions into
		individual machine pages, rather than having all of them
		randomly in the general guest OS page.
20190525	Adding detection of /opt/X11/{include,lib} in the configure
		script, to build with X11 on MacOS with XQuartz installed
		(thanks to eschatologist in the #GXemul IRC channel on
		FreeNode for noticing this).
20190530	Removing the "QEMU_MIPS" machine mode, which was useful back
		in 2006 to compare performance against QEMU's MIPS emulation.