@@ -705,6 +705,10 @@ void coproc_register_write(struct cpu *cpu,
 			break;
 		case COP0_ENTRYLO1:
 			unimpl = 0;
+			if (cpu->cd.mips.cpu_type.mmu_model == MMU3K) {
+				fatal("Attempt to access ENTRYLO1 with MMU3K?\n");
+				exit(1);
+			}
 			// Both MIPS III (such as R4000) and MIPS32/MIPS64 (?)
 			if (cpu->cd.mips.cpu_type.mmu_model != MMU3K) {
 				tmp &= (ENTRYLO_PFN_MASK | ENTRYLO_C_MASK |
@@ -1713,16 +1717,28 @@ void coproc_tlbwri(struct cpu *cpu, int randomflag)
 		}
 
 		{
-			uint64_t mask = cp->tlbs[index].mask;
-			uint64_t pagesize = 0x1000;
-			uint64_t tmp = mask >> 13;
-			while ((tmp & 1)) {
-				tmp >>= 1;
-				pagesize <<= 1;
+			// This is the "dual page" mask:
+			uint64_t dpmask = cp->tlbs[index].mask;
+			if (cpu->cd.mips.cpu_type.rev == MIPS_R4100) {
+				dpmask |= 0x07ff;
+			} else {
+				dpmask |= 0x1fff;
 			}
+
+			if (dpmask == 0x7ff) {
+				if (cp->tlbs[index].lo0 & ENTRYLO_V ||
+				    cp->tlbs[index].lo1 & ENTRYLO_V) {
+					fatal("1KB pages don't work with dyntrans.\n");
+					exit(1);
+				}
+			}
+
+			// Mask for bytes within a single page:
+			uint64_t mask = dpmask >> 1;
+
+			uint64_t pagesize = mask + 1;
 			
-			mask |= 0x1fff;
-			oldvaddr &= ~mask;
+			oldvaddr &= ~dpmask;
 
 			// printf("pagesize = %016llx mask = %016llx\n", pagesize, mask);
 			
@@ -1818,12 +1834,9 @@ void coproc_tlbwri(struct cpu *cpu, int randomflag)
 			cpu->update_translation_table(cpu, vaddr, memblock,
 			    wf, paddr);
 	} else {
-		/*  R4000 etc.:  */
-		unsigned char *memblock = NULL;
-		int pfn_shift = 12, vpn_shift = 12;
-		int wf0, wf1, mask;
-		uint64_t vaddr0, vaddr1, paddr0, paddr1, ptmp;
-		uint64_t psize;
+		/*  R4000, R10000, VR41xx etc.:  */
+		int wf0, wf1;
+		uint64_t vaddr0, vaddr1, ptmp, psize;
 
 		cp->tlbs[index].mask = cp->reg[COP0_PAGEMASK];
 		cp->tlbs[index].hi   = cp->reg[COP0_ENTRYHI];
@@ -1833,42 +1846,39 @@ void coproc_tlbwri(struct cpu *cpu, int randomflag)
 		wf0 = cp->tlbs[index].lo0 & ENTRYLO_D;
 		wf1 = cp->tlbs[index].lo1 & ENTRYLO_D;
 
-		mask = cp->reg[COP0_PAGEMASK];
+		// This is the "dual page" mask:
+		uint64_t dpmask = cp->reg[COP0_PAGEMASK];
 		if (cpu->cd.mips.cpu_type.rev == MIPS_R4100) {
-			pfn_shift = 10;
-			mask |= 0x07ff;
+			dpmask |= 0x07ff;
 		} else {
-			mask |= 0x1fff;
+			dpmask |= 0x1fff;
 		}
-		switch (mask) {
-		case 0x00007ff:
+
+		if (dpmask == 0x7ff) {
 			if (cp->tlbs[index].lo0 & ENTRYLO_V ||
 			    cp->tlbs[index].lo1 & ENTRYLO_V) {
 				fatal("1KB pages don't work with dyntrans.\n");
 				exit(1);
 			}
-			vpn_shift = 10;
-			break;
-		case 0x0001fff:	break;
-		case 0x0007fff:	vpn_shift = 14; break;
-		case 0x001ffff:	vpn_shift = 16; break;
-		case 0x007ffff:	vpn_shift = 18; break;
-		case 0x01fffff:	vpn_shift = 20; break;
-		case 0x07fffff:	vpn_shift = 22; break;
-		case 0x1ffffff:	vpn_shift = 24; break;
-		case 0x7ffffff:	vpn_shift = 26; break;
-		default:fatal("Unimplemented MASK = 0x%016x\n", mask);
-			exit(1);
 		}
 
-		pfn_shift = vpn_shift;
+		// Mask for bytes within a single page:
+		uint64_t mask = dpmask >> 1;
 
-		paddr0 = ((cp->tlbs[index].lo0 & ENTRYLO_PFN_MASK)
-		    >> ENTRYLO_PFN_SHIFT) << pfn_shift
-		    >> vpn_shift << vpn_shift;
-		paddr1 = ((cp->tlbs[index].lo1 & ENTRYLO_PFN_MASK)
-		    >> ENTRYLO_PFN_SHIFT) << pfn_shift
-		    >> vpn_shift << vpn_shift;
+		// printf("mask = %016llx\n", (long long)mask);
+
+		uint64_t pfn0 = (cp->tlbs[index].lo0 & ENTRYLO_PFN_MASK) >> ENTRYLO_PFN_SHIFT;
+		uint64_t pfn1 = (cp->tlbs[index].lo1 & ENTRYLO_PFN_MASK) >> ENTRYLO_PFN_SHIFT;
+
+		uint64_t paddr0, paddr1;
+
+		if (cpu->cd.mips.cpu_type.rev == MIPS_R4100) {
+			paddr0 = (pfn0 << 10) & ~mask;
+			paddr1 = (pfn1 << 10) & ~mask;
+		} else {
+			paddr0 = (pfn0 << 12) & ~mask;
+			paddr1 = (pfn1 << 12) & ~mask;
+		}
 
 		if (cpu->cd.mips.cpu_type.mmu_model == MMU10K) {
 			vaddr0 = cp->tlbs[index].hi & (ENTRYHI_R_MASK | ENTRYHI_VPN2_MASK_R10K);
@@ -1881,10 +1891,12 @@ void coproc_tlbwri(struct cpu *cpu, int randomflag)
 			vaddr0 = cp->tlbs[index].hi & (ENTRYHI_R_MASK | ENTRYHI_VPN2_MASK);
 		}
 
-		vaddr1 = vaddr0 | (1 << vpn_shift);
+		psize = mask + 1;
 
-		g_bit = (cp->reg[COP0_ENTRYLO0] &
-		    cp->reg[COP0_ENTRYLO1]) & ENTRYLO_G;
+		vaddr0 &= ~dpmask;
+		vaddr1 = vaddr0 | psize;
+
+		g_bit = (cp->reg[COP0_ENTRYLO0] & cp->reg[COP0_ENTRYLO1]) & ENTRYLO_G;
 
 		if (cpu->cd.mips.cpu_type.rev == MIPS_R4100) {
 			/*  NOTE: The VR4131 (and possibly others) don't have
@@ -1903,7 +1915,6 @@ void coproc_tlbwri(struct cpu *cpu, int randomflag)
 		 *  Invalidate any code translations, if we are writing Dirty
 		 *  pages to the TLB:
 		 */
-		psize = 1 << pfn_shift;
 
 		if (wf0) {
 			for (ptmp = 0; ptmp < psize; ptmp += 0x1000)
@@ -1927,14 +1938,16 @@ void coproc_tlbwri(struct cpu *cpu, int randomflag)
 		 *             this.
 		 */
 		if (psize == 0x1000) {
-			memblock = memory_paddr_to_hostaddr(cpu->mem, paddr0, 0);
-			if (memblock != NULL && cp->reg[COP0_ENTRYLO0] & ENTRYLO_V)
-				cpu->update_translation_table(cpu, vaddr0, memblock,
-				    wf0, paddr0);
-			memblock = memory_paddr_to_hostaddr(cpu->mem, paddr1, 0);
-			if (memblock != NULL && cp->reg[COP0_ENTRYLO1] & ENTRYLO_V)
-				cpu->update_translation_table(cpu, vaddr1, memblock,
-				    wf1, paddr1);
+			if (cp->reg[COP0_ENTRYLO0] & ENTRYLO_V) {
+				unsigned char *memblock = memory_paddr_to_hostaddr(cpu->mem, paddr0, 0);
+				if (memblock != NULL)
+					cpu->update_translation_table(cpu, vaddr0, memblock, wf0, paddr0);
+			}
+			if (cp->reg[COP0_ENTRYLO1] & ENTRYLO_V) {
+				unsigned char *memblock = memory_paddr_to_hostaddr(cpu->mem, paddr1, 0);
+				if (memblock != NULL)
+					cpu->update_translation_table(cpu, vaddr1, memblock, wf1, paddr1);
+			}
 		}
 
 		/*  Set new last_written_tlb_index hint:  */
